fixed gaps between playlist cards on homepage

--- a/src/style.css
+++ b/src/style.css
@@ -259,7 +259,8 @@ main > *.hidden {
     height: 100%;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: flex-start;
+    align-content: flex-start;
+    align-items: center;
     overflow-y: auto;
     background-color: rgba(255, 255, 255, 0.02);
 }
